--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
   <body class="body">
     <form class="comment-form">
       <div class="form-field">
-        <label class="form-field__label" for="name">Имя</label>
-        <input class="form-field__input" type="text" id="name" name="name" required minlength="4" maxlength="15" size="10">
+        <label class="form-field__label" for="username">Имя</label>
+        <input class="form-field__input" type="text" id="username" name="username" required minlength="4" maxlength="15" size="10">
       </div>
       <div class="form-field">
-        <label class="form-field__label" for="comment">Комментарий</label>
-        <textarea class="form-field__input form-field__input_comment" id="comment" name="comment" required></textarea>
+        <label class="form-field__label" for="commentText">Комментарий</label>
+        <textarea class="form-field__input form-field__input_comment" id="commentText" name="commentText" required></textarea>
       </div>
+      <button class="submit-button" type="button">Отправить</button>
     </form>
     <div id="comments"></div>
+    <script src="js/initial-comments.js"></script>
     <script src="js/load-comments.js"></script>
-    <script src="js/show-comments.js"></script>
+    <script src="js/add-new-comment.js"></script>
   </body>
