Реализовано удаление комментариев

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <div class="comments"></div>
     </div>
     <script src="js/initial-comments.js"></script>
-    <script src="js/load-comments.js"></script>
+    <script src="js/update-comments.js"></script>
     <script src="js/add-new-comment.js"></script>
     <script src="js/style-date-input.js"></script>
+    <script src="js/delete-comment.js"></script>
   </body>
