--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="body">
     <div class="wrapper">
-      <form class="comment-form">
+      <form class="comment-form" name="comment-form">
         <div class="form-field">
           <label class="form-field__label form-field__label_required" for="username">Имя</label>
           <input class="form-field__input" type="text" id="username" name="username" required>
@@ -25,7 +25,7 @@
           <label class="form-field__label form-field__label_required" for="commentText">Комментарий</label>
           <textarea class="form-field__input form-field__input_comment" id="commentText" name="commentText" required></textarea>
         </div>
-        <button class="submit-button" type="submit">Отправить</button>
+        <button class="submit-button" name="submit-button" type="submit">Отправить</button>
       </form>
       <div class="comments"></div>
     </div>
