--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
     <script src="js/add-new-comment.js"></script>
     <script src="js/style-date-input.js"></script>
     <script src="js/delete-comment.js"></script>
+    <script src="js/like-comment.js"></script>
   </body>
