--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <div class="comments"></div>
     </div>
     <script src="js/initial-comments.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/update-comments.js"></script>
     <script src="js/add-new-comment.js"></script>
     <script src="js/style-date-input.js"></script>
