--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </head>
   <body class="body">
     <div class="wrapper">
-      <form class="comment-form" name="comment-form">
+      <form class="comment-form" name="comment-form" method="post">
         <div class="form-field">
           <label class="form-field__label form-field__label_required" for="username">Имя</label>
-          <input class="form-field__input" type="text" id="username" name="username" required>
+          <input class="form-field__input" type="text" id="username" name="username">
         </div>
         <div class="form-field">
           <label class="form-field__label" for="date">Дата</label>
@@ -23,7 +23,7 @@
         </div>
         <div class="form-field form-field_comment">
           <label class="form-field__label form-field__label_required" for="commentText">Комментарий</label>
-          <textarea class="form-field__input form-field__input_comment" id="commentText" name="commentText" required></textarea>
+          <textarea class="form-field__input form-field__input_comment" id="commentText" name="commentText"></textarea>
         </div>
         <button class="submit-button" name="submit-button" type="submit">Отправить</button>
       </form>
@@ -36,4 +36,5 @@
     <script src="js/style-date-input.js"></script>
     <script src="js/delete-comment.js"></script>
     <script src="js/like-comment.js"></script>
+    <script src="js/validate-form.js"></script>
   </body>
